--- a/style.css
+++ b/style.css
@@ -5,6 +5,7 @@
 }
 body {
   font-family: "Montserrat", sans-serif;
+  background-color: antiquewhite;
 }
 i,
 svg {
@@ -94,6 +95,25 @@ select {
 
 .mute.active {
   background-color: rgb(197, 11, 11);
+}
+
+.tempo {
+  margin: 3rem;
+  width: 30%;
+}
+.tempo-slider {
+  padding: 0.3rem;
+  -webkit-appearance: none;
+  margin: 1rem 0rem;
+  width: 100%;
+  border-radius: 1rem;
+  position: relative;
+  background-color: rgb(21, 172, 159);
+}
+.tempo p {
+  font-size: 1.5rem;
+  margin: 2rem;
+  text-align: center;
 }
 
 @keyframes playTrack {
